--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-<<<<<<< HEAD
   min-width: 320px;
   max-width: 100vw;
   overflow-x: hidden;
@@ -36,11 +35,17 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-=======
->>>>>>> 892665a32ff65341089905c7987220ed7412b030
 }
 
 #app {
   width: 100%;
   padding: 2rem;
 }
+
+#Main{
+  position: relative;
+  height: 88vh;
+  width: 100%;
+}
+
+
